# helen

./: .gitignore  README.md  pyproject.toml
src/: main.py  utils.py
src/audio/: audio.py  const.py  resizer.py
src/nlp/: AIParser.py  TokenUtils.py
src/transcript/: whisper.py
tests/: utils_test.py
