[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["정승현 <tmdgusya@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.129"
python-dotenv = "^1.0.0"
openai = "^0.27.2"
nltk = "^3.8.1"
pyaudio = "^0.2.13"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
